--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
         
         <div id="tribute-info" class="info">
           <ul class="content">
-            <li><p class="year">1815 </p><p> Born in London.</p>
+            <li><p class="year">1815 </p><p class="content-text"> Born in London.</p>
             </li>
-            <li><p class="year">1829 </p><p> She was paralysed after a bout of measles.</p> 
+            <li><p class="year">1829 </p><p class="content-text"> She was paralysed after a bout of measles.</p> 
             </li>
-            <li><p class="year">1831 </p><p> Ada was able to walk with crutches. Despite the illness, she developed her mathematical and technological skills.</p> 
+            <li><p class="year">1831 </p><p class="content-text"> Ada was able to walk with crutches. Despite the illness, she developed her mathematical and technological skills.</p> 
             </li>
-            <li><p class="year">1833 </p> <p> Mary Somerville introduced Ada to Charles Babbage, then both mary and charles became Ada's friends and tutors.</p>
+            <li><p class="year">1833 </p> <p class="content-text">  Mary Somerville introduced Ada to Charles Babbage, then both mary and charles became Ada's friends and tutors.</p>
             </li>
-            <li><p class="year">1835 </p><p> She married William, 8th Baron King, becoming Lady King. And they had three children.</p>
+            <li><p class="year">1835 </p><p class="content-text"> She married William, 8th Baron King, becoming Lady King. And they had three children.</p>
             </li>
-            <li><p class="year">1838 </p><p> Her husband was made Earl of Lovelace and Viscount Ockham, and Ada became the Countess of Lovelace.</p> 
+            <li><p class="year">1838 </p><p class="content-text"> Her husband was made Earl of Lovelace and Viscount Ockham, and Ada became the Countess of Lovelace.</p> 
             </li>
-            <li><p class="year">1842 </p><p> Lovelace translated the Italian mathematician Luigi Menabrea's article on Babbage's newest proposed machine, the Analytical Engine. With the article, she appended a set of notes. TThose notes facilited the comprehension of the article and, because of that, Ada was praised by Michael Faraday.</p> 
+            <li><p class="year">1842 </p><p class="content-text"> Lovelace translated the Italian mathematician Luigi Menabrea's article on Babbage's newest proposed machine, the Analytical Engine. With the article, she appended a set of notes. TThose notes facilited the comprehension of the article and, because of that, Ada was praised by Michael Faraday.</p> 
             </li>
-            <li><p class="year">1844 </p><p> She visited the electrical engineer Andrew Crosse to learn how to carry out electrical experiments. Ada desire to create a mathematical model for how the brain gives rise to thoughts and nerves to feelings. </p> 
+            <li><p class="year">1844 </p><p class="content-text"> She visited the electrical engineer Andrew Crosse to learn how to carry out electrical experiments. Ada desire to create a mathematical model for how the brain gives rise to thoughts and nerves to feelings. </p> 
             </li>
-            <li><p class="year">1852 </p><p> Ada Byron died at the age of 36 from uterine cancer.</p> 
+            <li><p class="year">1852 </p><p class="content-text"W> Ada Byron died at the age of 36 from uterine cancer.</p> 
             </li>
           </ul>
         </div>
