Melhora de compatibilidade. | Compatibility Update.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <title>Tribute Page</title>
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/style.css">
-  </head>
+    <meta charset="UTF-8">
+    <meta name="description" content="A tribute to Ada Lovelave">
+    <meta name="keywords" content="Ada, Lovelace, Countess of Lovelace, Ada Lovelace, ada, ada lovelace, lovelace, History, history">
+    <meta name="author" content="André Santana Nunes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    </head>
   <body>
     <main id="main" class="main">
       <header >
